docs(saturacao): recomendações de deployment (K8s/Fargate) + sweep de heap
Adiciona §8 "Recomendações de deployment": heap/memória (sweep mostrando que o ZGC
stalla com heap apertado — ≥1GB/core; LOW plateia em ~18k já com 1GB/core), CPU/QoS,
e especificidades do EKS Fargate (micro-VM dedicada = Guaranteed, mas Redis sempre
pela rede → LOW menor, cold start pior, combos vCPU×memória). Indexa o
OTIMIZACAO-THROUGHPUT.md na lista de documentos do AGENTS.md.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>